syntax = "proto3";

package xyz.block.ftl.v2alpha1;

import "xyz/block/ftl/v1/ftl.proto";
import "xyz/block/ftl/v1/verb.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/v2alpha1";
option java_multiple_files = true;

service RoutingService {
  rpc Ping(v1.PingRequest) returns (v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc Call(v1.CallRequest) returns (v1.CallResponse);
}
